# Projects_ETF

Angular_project/backend/src/: server.ts
Angular_project/mongo/: projekat.all_examinations.json  projekat.appointments.json  projekat.doctor_examinations.json  projekat.rejected.json  projekat.reports.json  projekat.specializations.json  projekat.users.json
Basics_of_computer_technology/: Readme.txt  codetest3b.txt  codetestA.txt  codetestB.txt  konfiguracija.txt  microProgram.txt
ImageEditing_SIMD/: CMakeLists.txt
ImageEditing_SIMD/Cpp/: Image.cpp  main.cpp
ImageEditing_SIMD/Header/: Image.h  avx_mathfun.h
Java_MiniGame/src/space_force/: Generator.java  Igrac.java  Kometa.java  Metak.java  (+4 more)
OS_project/cpp/: MemoryAllocator.cpp  kThread.cpp  supervisorTrap.S  syscall_c.cpp
OS_project/h/: Threads_CPP_API_test.hpp  Threads_C_API_test.hpp  kSemaphore.hpp  list.hpp  scheduler.hpp  syscall_cpp.hpp
OS_projekat/gotovo_cpp/: Riscv.cpp  _new.cpp  contextSwitch.S  kSemaphore.cpp  main.cpp  scheduler.cpp  syscall_cpp.cpp  userMain.cpp
OS_projekat/gotovo_hpp/: MemoryAllocator.hpp  Riscv.hpp  kThread.hpp  syscall_c.hpp
System_Software_project/: makefile
System_Software_project/inc/: assembler.hpp  assembler_structures.hpp  emulator.hpp  line.hpp  linker.hpp
System_Software_project/misc/: lexer.l  parser.y
System_Software_project/src/: assembler.cpp  emulator.cpp  line.cpp  linker.cpp  main_assembler.cpp  main_emulator.cpp  main_linker.cpp
System_Software_project/tests/: test.s
VLSI_project/tooling/: makefile  mem_init.mif
mini_shazam/: main.py
(+98 files in other folders)
